@@ -290,6 +290,7 @@ echo ""
 
 # Xlog:gc 
 JVM_ARGS="-Xms5g -Xmx16g -XX:+UseNUMA -XX:+UseG1GC -XX:-RestrictContended -ea --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --enable-preview"
+JVM_ARGS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
 
 if [[ $typeTest == "Microbenchmark" ]]
 then
